Fix Chrome crash when user block a specific external application

Applaunchertabhelper's RequestToLaunchApp doesn't retain urls before prompting.
Adding Retaining to the URLs.

Bug: 805577
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I5c0cb8b236997126534bc3fc0d16a90e4504cc47
Reviewed-on: https://chromium-review.googlesource.com/884304
Reviewed-by: Mohammad Refaat <mrefaat@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Mohammad Refaat <mrefaat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531659}
Former-commit-id: b2ccc066e10dd9131a8cf5fa376ece456bbb480e